[gd_scene load_steps=10 format=2]

[ext_resource path="res://AndroidUI.gd" type="Script" id=1]
[ext_resource path="res://sprites/lineLight/lineLight47.png" type="Texture" id=2]
[ext_resource path="res://sprites/lineDark/lineDark44.png" type="Texture" id=3]
[ext_resource path="res://sprites/lineLight/lineLight22.png" type="Texture" id=4]
[ext_resource path="res://sprites/lineDark/lineDark19.png" type="Texture" id=5]
[ext_resource path="res://sprites/lineDark/lineDark21.png" type="Texture" id=6]
[ext_resource path="res://sprites/lineLight/lineLight23.png" type="Texture" id=7]
[ext_resource path="res://sprites/lineLight/lineLight24.png" type="Texture" id=8]
[ext_resource path="res://sprites/lineDark/lineDark20.png" type="Texture" id=9]

[node name="AndroidUI" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 30.0
margin_right = -30.0
margin_bottom = -30.0
mouse_filter = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 964.0
margin_bottom = 540.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PushToBottom" type="Control" parent="VBoxContainer"]
margin_right = 964.0
margin_bottom = 236.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Commands" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 240.0
margin_right = 964.0
margin_bottom = 540.0
size_flags_horizontal = 3

[node name="Fire" type="CenterContainer" parent="VBoxContainer/Commands"]
margin_top = 150.0
margin_right = 150.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 0 )
mouse_filter = 1
size_flags_vertical = 4

[node name="FireTouch" type="TouchScreenButton" parent="VBoxContainer/Commands/Fire"]
modulate = Color( 1, 1, 1, 0.392157 )
scale = Vector2( 2, 2 )
normal = ExtResource( 2 )
pressed = ExtResource( 3 )
visibility_mode = 1

[node name="PushAside" type="Control" parent="VBoxContainer/Commands"]
margin_left = 154.0
margin_right = 510.0
margin_bottom = 300.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Move" type="Control" parent="VBoxContainer/Commands"]
margin_left = 514.0
margin_right = 964.0
margin_bottom = 300.0
rect_min_size = Vector2( 450, 300 )
mouse_filter = 1

[node name="Grid" type="GridContainer" parent="VBoxContainer/Commands/Move"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Empy" type="Control" parent="VBoxContainer/Commands/Move/Grid"]
margin_right = 147.0
margin_bottom = 148.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Forward" type="CenterContainer" parent="VBoxContainer/Commands/Move/Grid"]
margin_left = 151.0
margin_right = 298.0
margin_bottom = 148.0
mouse_filter = 1

[node name="ForwardTouch" type="TouchScreenButton" parent="VBoxContainer/Commands/Move/Grid/Forward"]
modulate = Color( 1, 1, 1, 0.392157 )
scale = Vector2( 2, 2 )
normal = ExtResource( 8 )
pressed = ExtResource( 6 )
visibility_mode = 1

[node name="Empy2" type="Control" parent="VBoxContainer/Commands/Move/Grid"]
margin_left = 302.0
margin_right = 449.0
margin_bottom = 148.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Left" type="CenterContainer" parent="VBoxContainer/Commands/Move/Grid"]
margin_top = 152.0
margin_right = 147.0
margin_bottom = 300.0
mouse_filter = 1

[node name="LeftTouch" type="TouchScreenButton" parent="VBoxContainer/Commands/Move/Grid/Left"]
modulate = Color( 1, 1, 1, 0.392157 )
scale = Vector2( 2, 2 )
normal = ExtResource( 4 )
pressed = ExtResource( 5 )
visibility_mode = 1

[node name="Empty3" type="Control" parent="VBoxContainer/Commands/Move/Grid"]
margin_left = 151.0
margin_top = 152.0
margin_right = 298.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Right" type="CenterContainer" parent="VBoxContainer/Commands/Move/Grid"]
margin_left = 302.0
margin_top = 152.0
margin_right = 449.0
margin_bottom = 300.0
mouse_filter = 1

[node name="RightTouch" type="TouchScreenButton" parent="VBoxContainer/Commands/Move/Grid/Right"]
modulate = Color( 1, 1, 1, 0.392157 )
scale = Vector2( 2, 2 )
normal = ExtResource( 7 )
pressed = ExtResource( 9 )
visibility_mode = 1
[connection signal="pressed" from="VBoxContainer/Commands/Fire/FireTouch" to="." method="_on_FireTouch_pressed"]
[connection signal="released" from="VBoxContainer/Commands/Fire/FireTouch" to="." method="_on_FireTouch_released"]
[connection signal="pressed" from="VBoxContainer/Commands/Move/Grid/Forward/ForwardTouch" to="." method="_on_ForwardTouch_pressed"]
[connection signal="released" from="VBoxContainer/Commands/Move/Grid/Forward/ForwardTouch" to="." method="_on_ForwardTouch_released"]
[connection signal="pressed" from="VBoxContainer/Commands/Move/Grid/Left/LeftTouch" to="." method="_on_LeftTouch_pressed"]
[connection signal="released" from="VBoxContainer/Commands/Move/Grid/Left/LeftTouch" to="." method="_on_LeftTouch_released"]
[connection signal="pressed" from="VBoxContainer/Commands/Move/Grid/Right/RightTouch" to="." method="_on_RightTouch_pressed"]
[connection signal="released" from="VBoxContainer/Commands/Move/Grid/Right/RightTouch" to="." method="_on_RightTouch_released"]
